<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.lexianmarket.activity.ForgetActivity">
    <include layout="@layout/item_common_header"></include>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/forget_password"
         android:textSize="30dp"
         android:gravity="center"
         android:textColor="#FFFFF0"
         android:layout_marginTop="15dp"/>
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="90dp"
         android:orientation="vertical">
         <RelativeLayout
             android:layout_width="350dp"
             android:layout_height="50dp"
             android:layout_marginLeft="50dp"
             android:layout_centerHorizontal="true"
             android:background="@drawable/login_input_bg"
             android:layout_gravity="center">
             <ImageView
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
                 android:background="@mipmap/login_phone_icon"/>
             <EditText
                 android:id="@+id/forget_phone"
                 android:layout_toEndOf="@+id/login_phone_imageview"
                 android:layout_marginLeft="50dp"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_centerVertical="true"
                 android:textCursorDrawable="@drawable/drawable_cursor"
                 android:background="@null"
                 android:hint="@string/phone_number"/>
         </RelativeLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/user_information"
             android:textSize="25dp"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="65dp"/>
         <EditText
             android:layout_width="350dp"
             android:layout_height="50dp"
             android:layout_centerHorizontal="true"
             android:background="@drawable/login_input_bg"
             android:hint="@string/real_name"
             android:layout_marginLeft="65dp"
             android:layout_marginTop="20dp"
             android:id="@+id/forget_name"
             />
        <EditText
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_input_bg"
            android:hint="@string/email"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="20dp"
            android:id="@+id/forget_email"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_marginLeft="65dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
           <EditText
               android:layout_width="150dp"
               android:layout_height="45dp"
               android:hint="@string/message_short"
               android:layout_centerHorizontal="true"
               android:background="@drawable/login_input_bg"
               />
           <Button
               android:layout_width="120dp"
               android:layout_height="45dp"
               android:text="@string/get_message"
               android:textSize="18dp"
               android:layout_marginLeft="40dp"
               android:background="#1E90FF"/>
        </LinearLayout>
        <Button
            android:id="@+id/forget_next"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="45dp"
            android:text="@string/next_step"
            android:textSize="20dp"
            android:textColor="#ffff"
            android:layout_marginLeft="65dp"
            android:background="#5C5C5C"/>
     </LinearLayout>
</RelativeLayout>
