<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.lexianmarket.activity.ForgetNextActivity">
    <include layout="@layout/item_common_header"></include>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="30dp"
        android:gravity="center"
        android:textColor="#FFFFF0"
        android:layout_marginTop="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="80dp">
        <EditText
            android:id="@+id/repassword"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_input_bg"
            android:hint="@string/input_new_password"
            android:textSize="20dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="50dp"></EditText>
        <EditText
            android:id="@+id/repassword2"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_input_bg"
            android:hint="@string/second_input_password"
            android:textSize="20dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="20dp"></EditText>
        <Button
            android:id="@+id/complete"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="45dp"
            android:text="@string/finish"
            android:textSize="22dp"
            android:textColor="#ffff"
            android:layout_marginLeft="65dp"
            android:background="#5C5C5C"/>
    </LinearLayout>
</RelativeLayout>
