<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white">
    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/cb_item"/>


    <TextView
        android:id="@+id/tv_commodity_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_cover"
        android:text="@string/commodity_name"
        android:lines="1"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_alignTop="@id/iv_cover"/>
    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/iv_cover"
        android:layout_toRightOf="@id/iv_cover"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:textColor="#ff0000"
        android:textSize="16sp"
        android:text="@string/price"
        android:layout_alignLeft="@id/tv_commodity_name"/>


    <TextView
        android:id="@+id/tv_num"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_toRightOf="@id/tv_price"
        android:layout_alignTop="@id/tv_price"
        android:layout_marginLeft="50dp"
        android:text="@string/number"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:id="@+id/tv_total_amount"
        android:layout_width="120dp"
        android:lines="1"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:textSize="16sp"
        android:layout_above="@id/tv_price"
        android:layout_marginBottom="5dp"
        android:layout_alignLeft="@id/tv_commodity_name" />
</RelativeLayout>