<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/bg_body"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 顶部标题栏 -->
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@color/bg_header">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/cart_title_location_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_title"
                style="@style/text_head_title"/>
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_load"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            style="@android:style/Widget.ProgressBar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/loading"
            android:gravity="center"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <!-- 正文部分 -->
    <TextView
        android:id="@+id/tv_no_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/cart_empty"
        style="@style/text_cart_empty"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/tv_no_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="登录后才可以查看购物车哦"
        style="@style/text_cart_empty"
        android:visibility="gone"
        />

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/lv_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_top"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        >
    </com.handmark.pulltorefresh.library.PullToRefreshListView>


    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">
        <Button
            android:id="@+id/btn_cart_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:background="@color/text_red"
            android:textColor="@color/bg_white"
            android:text="@string/balance"/>
        <Button
            android:id="@+id/btn_delete_cart"
            android:layout_toLeftOf="@id/btn_cart_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/bg_header"
            android:textColor="@color/bg_white"
            android:text="@string/delete_selected"/>
        <Button
            android:layout_toLeftOf="@id/btn_delete_cart"
            android:id="@+id/btn_clear_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:textColor="@color/text_white"
            android:text="@string/cleaning"/>


    </RelativeLayout>

</RelativeLayout>