<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.lexianmarket.activity.WalletActivity">

    <include layout="@layout/item_common_header"></include>

    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/money"
        android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_balance"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/balance"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <Button
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/bg_btn_stroke"
            android:text="@string/recharge"
            android:textSize="22dp"
            android:layout_marginTop="100dp"
            android:id="@+id/charge"/>
        <Button
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/bg_btn"
            android:layout_marginTop="30dp"
            android:text="@string/transfer_accounts"
            android:textSize="22dp"
            android:id="@+id/forword" />
        <RelativeLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
        <TextView
            android:layout_marginTop="300dp"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_problem"
            android:textColor="#0099ff"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_below="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/wallet_string"
            android:textSize="16sp"
            android:textStyle="italic"/>
        </RelativeLayout>
</LinearLayout>
</RelativeLayout>
