<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/bg_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/ll_go_store"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="10dip"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/tv_store_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/store_name"
                android:textSize="15dip" />

            <ImageView
                android:id="@+id/common_title_next"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:src="@drawable/dialog_back_right" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_order_no_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/order_number" />

            <TextView
                android:id="@+id/tv_order_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_alignTop="@id/tv_order_no_name"
                android:layout_toRightOf="@id/tv_order_no_name"
                android:text="" />

            <TextView
                android:id="@+id/tv_order_date_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tv_order_no_name"
                android:layout_below="@id/tv_order_no_name"
                android:layout_marginTop="10dp"
                android:text="@string/creation_date" />

            <TextView
                android:id="@+id/tv_order_create_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_alignTop="@id/tv_order_date_name"
                android:layout_toRightOf="@id/tv_order_no_name"
                android:text="" />

            <TextView
                android:id="@+id/tv_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/tv_order_date_name"
                android:layout_marginRight="20dp"
                android:text="140.00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_total_amount"
                android:layout_toLeftOf="@id/tv_total_amount"
                android:text="@string/total_price" />

            <TextView
                android:id="@+id/tv_order_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/tv_total_amount"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/state_deliver_goods_had" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tv_order_state"
                android:layout_toLeftOf="@id/tv_order_state"
                android:text="@string/order_state" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>